tests/snapshots/yaml_suite_snapshots__yaml_suite_S7BG_med.snap
---
source: tests/yaml_suite_snapshots.rs
expression: med
---
- name: Colon followed by comma
  from: "@perlpunk"
  tags: scalar
  yaml: "---\n- :,\n"
  tree: "+STR\n +DOC ---\n  +SEQ\n   =VAL ::,\n  -SEQ\n -DOC\n-STR\n"
  json: "[\n  \":,\"\n]\n"
  dump: "---\n- :,\n"
