tests/snapshots/yaml_suite_snapshots__yaml_suite_S7BG_tight.snap
---
source: tests/yaml_suite_snapshots.rs
expression: tight
---
- dump: "---\n- :,\n"
  from: "@perlpunk"
  json: "[\n  \":,\"\n]\n"
  name: Colon followed by comma
  tags: scalar
  tree: "+STR\n +DOC ---\n  +SEQ\n   =VAL ::,\n  -SEQ\n -DOC\n-STR\n"
  yaml: "---\n- :,\n"
