tests/snapshots/yaml_suite_snapshots__yaml_suite_S98Z_med.snap
---
source: tests/yaml_suite_snapshots.rs
expression: med
---
- name: Block scalar with more spaces than first content line
  from: "@perlpunk"
  tags: error folded comment scalar whitespace
  fail: true
  yaml: "empty block scalar: >\n␣\n␣␣\n␣␣␣\n # comment\n"
  tree: "+STR\n +DOC\n  +MAP\n   =VAL :empty block scalar\n"
