tests/snapshots/yaml_suite_snapshots__yaml_suite_S98Z_tight.snap
---
source: tests/yaml_suite_snapshots.rs
expression: tight
---
- fail: true
  from: "@perlpunk"
  name: Block scalar with more spaces than first content line
  tags: error folded comment scalar whitespace
  tree: "+STR\n +DOC\n  +MAP\n   =VAL :empty block scalar\n"
  yaml: "empty block scalar: >\n␣\n␣␣\n␣␣␣\n # comment\n"
