tests/snapshots/yaml_suite_snapshots__yaml_suite_SBG9_med.snap
---
source: tests/yaml_suite_snapshots.rs
expression: med
---
- name: Flow Sequence in Flow Mapping
  from: NimYAML tests
  tags: complex-key sequence mapping flow
  yaml: "{a: [b, c], [d, e]: f}\n"
  tree: "+STR\n +DOC\n  +MAP {}\n   =VAL :a\n   +SEQ []\n    =VAL :b\n    =VAL :c\n   -SEQ\n   +SEQ []\n    =VAL :d\n    =VAL :e\n   -SEQ\n   =VAL :f\n  -MAP\n -DOC\n-STR\n"
  dump: "a:\n- b\n- c\n? - d\n  - e\n: f\n"
