tests/snapshots/yaml_suite_snapshots__yaml_suite_SF5V_full.snap
---
source: tests/yaml_suite_snapshots.rs
expression: full
---
- name: Duplicate YAML directive
  from: "@perlpunk"
  tags: directive error
  fail: true
  yaml: "%YAML 1.2\n%YAML 1.2\n---\n"
  tree: "+STR\n"
